--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "ant-vue-demo",
+  "name": "@czhw/demo-component-vue2",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "ant-design-vue": "^1.6.2",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "mockjs": "^1.1.0",
