--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "package": "vue-cli-service build --target lib ./src/packages/index.js --name demo-component-vue2 --destdemo-component-vue2",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
